--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "predeploy": "pnpm run build",
+    "deploy": "gh-pages -d build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "ldrs": "^1.1.7",
     "react": "^19.1.1",
@@ -28,6 +36,7 @@
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "less": "^4.4.1",
     "vite": "^7.1.2"
