--- a/package.json
+++ b/package.json
@@ -6,25 +6,27 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
     "predeploy": "pnpm run build",
     "deploy": "gh-pages -d build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
+    "gsap": "^3.13.0",
     "ldrs": "^1.1.7",
+    "lucide-react": "^0.554.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.1",
     "react-scrollama": "^2.4.2",
     "react-simple-typewriter": "^5.0.1",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.17",
     "three": "^0.179.1",
     "vanta": "^0.5.24"
   },
@@ -39,6 +41,7 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "less": "^4.4.1",
+    "tw-animate-css": "^1.4.0",
     "vite": "^7.1.2"
   }
 }
